syntax = "proto3";

option csharp_namespace = "FilmService";

import "google/protobuf/timestamp.proto";

package film;

service FilmServ {
  rpc GetFilmPrice (GetFilmPriceRequest) returns (GetFilmPriceReply);
}

message GetFilmPriceRequest {
  string film_name = 1;
  string producer_name = 2;
  google.protobuf.Timestamp release_date = 3;
}

message GetFilmPriceReply {
  int32 price = 1;
}
